# movement-olympus-2024

./: README.md
contracts/: Move.toml
contracts/.aptos/: config.yaml
gpow-nocturne-frontend/: .env.example  README.md  flow.excalidraw  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
gpow-nocturne-frontend/src/: cotract_we_are_converting_lib.rs
gpow-nocturne-frontend/src/__tests__/: polkadot.test.js
gpow-nocturne-frontend/src/app/: globals.css  layout.tsx  page.tsx
gpow-nocturne-frontend/src/app/training/: page.tsx
gpow-nocturne-frontend/src/components/header/: index.tsx
gpow-nocturne-frontend/src/components/svg/: file-icon.tsx  upload-icon.tsx
gpow-nocturne-frontend/src/components/ui/: button.tsx  checkbox.tsx  error-message.tsx  heading.tsx  index.tsx  input.tsx  (+3 more)
gpow-nocturne-frontend/src/constants/: selectFields.ts
gpow-nocturne-frontend/src/context/: substrate-context.tsx
gpow-nocturne-frontend/src/hooks/: use-aptos.tsx  use-ipfs.tsx  use-polkadot.tsx  use-substrate.tsx  use-upload-file.tsx
gpow-nocturne-frontend/src/lib/: abi.json
gpow-nocturne-frontend/src/providers/: aptos-provider.tsx  substrate-provider.tsx
gpow-nocturne-frontend/src/utils/: form-schema.ts
tap-train-integration/: pyproject.toml  token-distribution-service.py
taptrain-job-listener/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
taptrain-job-listener/src/: index.ts  nocturne-job.ts  taptrain.ts
taptrain-job-listener/src/helpers/: submit-transaction.ts
taptrain-job-listener/src/types/: env.ts  job.ts
(+5 files in other folders)
