[tool.poetry]
name = "tap-train-integration"
version = "0.1.0"
description = ""
authors = ["Greg Horejsi <greg@immu.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aptos-sdk = "^0.9.0"
psycopg = "^3.2.1"
pydantic-settings = "^2.4.0"
asyncio = "^3.4.3"
ipfs-api = "^0.2.3"
pydantic = "^2.9.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pytest = "^8.3.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
